--- a/html/raul.html
+++ b/html/raul.html
@@ -2,23 +2,22 @@
 <html lang="ca">
 <head>
   <meta charset="utf-8"/>
-  <title>Treballant amb GIT</title>
-  <link rel="stylesheet" href="css/estils.css">
+  <title>Web de Raül</title>
+  <link rel="stylesheet" href="../css/estils.css">
 </head>
 
 <body>
   <div id="contenidor">
 	<header id="cap">
-		<h1>Repositori de prova</h1>		
+		<h1>Pàgina web de Raül Valls</h1>
 	</header>
 	<main id="principal">
-		<figure>
-			<img src="img/git.jpg" alt="git" class="imatge" />
+		<figure  class="fonsraul">
+			<img src="../img/raul.jpg" alt="Raül" class="imatgegran" />
 		</figure>
-		<ul>
-			<li><a href="./html/raul.html">Raül Valls</a></li>
-
-		</ul>
+		<p>
+			<a href="../index.html">Torna a l'inici</a>
+		</p>
 	</main>
 	<footer id="peu">
 		<h3>DAW</h3>
