--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</figure>
 		<ul>
 			<li><a href="./html/raul.html">Raül Valls</a></li>
-
+			<li><a href="./html/ivan.html">Ivan Perales</a></li>
 		</ul>
 	</main>
 	<footer id="peu">
