--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 			<li><a href="./html/raul.html">Raül Valls</a></li>
 			<li><a href="./html/alvaro.html">Alvaro Gomez</a></li>
 			<li><a href="./html/sergio.html">Sergio Gimeno</a></li>
+			<li><a href="./html/arnau.html">Arnau Domenech</a></li>
+			
 
 		</ul>
 	</main>
