--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<li><a href="./html/alvaro.html">Alvaro Gomez</a></li>
 			<li><a href="./html/sergio.html">Sergio Gimeno</a></li>
 			<li><a href="./html/arnau.html">Arnau Domenech</a></li>
+			<li><a href="./html/hugo.html">Hugo Sanchis</a></li>
 
 		</ul>
 	</main>
