--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 			<li><a href="./html/alvaro.html">Alvaro Gomez</a></li>
 			<li><a href="./html/sergio.html">Sergio Gimeno</a></li>
 			<li><a href="./html/arnau.html">Arnau Domenech</a></li>
+			<li><a href="./html/quico.html">Quico Blesa</a></li>
+			
 
 		</ul>
 	</main>
