--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<li><a href="./html/hugo.html">Hugo Sanchis</a></li>
 			<li><a href="./html/marcos.html">Marcos Giner</a></li>
 			<li><a href="./html/quico.html">Quico Blesa</a></li>
+			<li><a href="./html/joan.html">Joan Ibañez</a></li>
 		</ul>
 	</main>
 	<footer id="peu">
