--- a/html/sergio.html
+++ b/html/sergio.html
@@ -13,7 +13,7 @@
 	</header>
 	<main id="principal">
 		<figure  class="fonsraul">
-			<img src="../img/sergio.jpg" alt="Sergio" class="imatgegran" />
+			<img src="../img/sergiog.jpg" alt="Sergio" class="imatgegran" />
 		</figure>
 		<p>
 			<a href="../index.html">Torna a l'inici</a>
